# Causal_Bridge

./: .gitignore  GEMINI_SETUP.md  PPT_CONTENT.md  README.md  VERSION_2.0.md  debug_csv.py  pyproject.toml  requirements.txt  start_server.ps1  test_column_matching.py  test_gemini.py  test_hr_attrition.py  test_membership_question.py  test_real_questions.py
src/: main.py
src/api/: __init__.py  dependencies.py  routes.py  upload_routes.py  visualization_routes.py
src/core/: __init__.py  config.py  exceptions.py
src/models/: request_models.py  response_models.py
src/services/: __init__.py  advanced_causal_methods.py  causal_inference_service.py  data_quality.py  nlp_service.py  nlp_service_gemini.py  validation_service.py
src/utils/: __init__.py
static/: dashboard.html
tests/: test_api.py  test_causal_inference.py  test_services.py
